--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto3==1.34.131
 fiona==1.9.6
 matplotlib==3.5.1
 numpy==1.21.5
+pandas==2.2.2
 python-dotenv==1.0.1
 rasterio==1.3.10
 requests==2.32.3
