--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ python-dotenv = "^1.0.1"
 rasterio = "^1.3.10"
 requests = "^2.32.3"
 scikit-learn = "^1.5.1"
+torch = "^2.6.0"
+scipy = "^1.15.2"
 
 
 [build-system]
