--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,31 @@
-madrid/sentinel
-models
-notebooks
-data/landcoverai
-data/sentinel
-data/rasters
-*.tif
-*.npy
-Sentinel-2
-__pycache__
-.env
-.venv
-.ipynb_checkpoints
 *.RData
 *.Rhistory
-madrid/.RDataTmp
-.virtual_documents
-*.csv
-*.png
-*.zip
-*.jp2
-*.xml
-*.tar
-*.prj
-*.mgrd
-*.sgrd
-*.sdat
 *.cpg
+*.csv
 *.dbf
+*.jp2
+*.mgrd
+*.npy
+*.png
+*.prj
+*.sdat
+*.sgrd
 *.shp
 *.shx
+*.tar
+*.tif
+*.xml
+*.zip
+.env
+.ipynb_checkpoints
+.venv
+.virtual_documents
+Sentinel-2
+__pycache__
+data/landcoverai
+data/rasters
+data/sentinel
+madrid/.RDataTmp
+madrid/sentinel
+models
+site
