--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,32 @@
 # Configuration
+download:
+    copernicus-s3:
+        access_key: ${oc.env:ACCESS_KEY}
+        secret_access_key: ${oc.env:SECRET_ACCESS_KEY}
+    netatmo:
+        token: 679b955ca250de0e040eb492|949b82156478188bbb44f8918f7295c3
+
 cnn:
     patch_size: 64
     model_path: checkpoint.pth.tar
-    input_channels: 2 # SVF & GLI
+    input_channels: 1 # SVF & GLI
     learning_rate: 0.01
     batch_size: 16
     epochs: 30
 
-copernicus-s3:
-    access_key: ${oc.env:ACCESS_KEY}
-    secret_access_key: ${oc.env:SECRET_ACCESS_KEY}
+logging:
+    version: 1
+    disable_existing_loggers: false
+    formatters:
+        simple:
+            format: '[%(asctime)s] %(levelname)s - %(message)s'
+    handlers:
+        console:
+            class: logging.StreamHandler
+            level: DEBUG
+            formatter: simple
+            stream: ext://sys.stdout
+    root:
+        level: INFO
+        handlers: [console]
+    
