--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.jp2 filter=lfs diff=lfs merge=lfs -text
-notebooks/** linguist-vendored
+*.ipynb linguist-vendored
