--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,10 @@
 # Configuration
+crs: 'EPSG:25830'
+
+study_period: # Format: DD-MM-YYYY
+    start: '01-06-2023'
+    end: '31-08-2023'
+
 download:
     copernicus-s3:
         access_key: ${oc.env:ACCESS_KEY}
@@ -30,3 +36,15 @@ logging:
         level: INFO
         handlers: [console]
     
+paths:
+    shapefiles:
+        study_area: 'study_area.shp'
+        netatmo_stations: 'netatmo_stations.shp'
+    rasters:
+        dsm: 'dsm.tif' # DSM stands for Digital Surface Model
+        gli: 'gli.tif' # GLI stands for Green Leaf Index
+        svf: 'svf.tif' # SVF stands for Sky View Factor
+        satellite_folder: 'sentinel'
+    stations:
+        temperatures: 'temperatures.csv' # Includes all recorded temperatures, compiled from the merged CSV files of all stations after data cleaning and quality control
+        differences: 'diffs.csv' # Includes the computed temperature differences between each station and the reference stations
